--- a/WebKrot/WebKrot/appsettings.json
+++ b/WebKrot/WebKrot/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ContextCS": "Data Source=KrotDb"
+  },
   "AllowedHosts": "*"
 }
