--- a/WebKrot/WebKrot/appsettings.json
+++ b/WebKrot/WebKrot/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ContextCS": "Data Source=KrotDb"
+    "ConnectionSqlite": "Data Source=mydatabase.db"
   },
   "AllowedHosts": "*"
 }
