--- a/WebKrot/WebKrot/appsettings.json
+++ b/WebKrot/WebKrot/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "ConnectionSqlite": "Data Source=mydatabase.db"
   },
+  "JwtSecretKey": "asfkahfiuIYI2347628346hfskfha,bnLKBJLxkasjdfsafASDFASFHweuihiahsdfSADFNVC",
   "AllowedHosts": "*"
 }
